PPJ/stringovi/parser.output
Grammar

    0 $accept: Program $end

    1 Program: Naredba ';' Program
    2        | Naredba ';'

    3 Naredba: string_token id_token '=' E
    4        | string_token id_token
    5        | print_token '(' E ')'
    6        | reverse_token '(' id_token ')'
    7        | length_token '(' E ')'
    8        | sort_token '(' id_token ')'
    9        | upper_token '(' id_token ')'
   10        | lower_token '(' id_token ')'
   11        | substring_token '(' E ',' E ')'
   12        | id_token '=' E
   13        | id_token concat_token E
   14        | E eq_token E

   15 E: '(' E ')'
   16  | E '+' E
   17  | E '*' broj_token
   18  | id_token '[' broj_token ',' broj_token ']'
   19  | string_value_token
   20  | id_token


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 5 6 7 8 9 10 11 15
    ')' (41) 5 6 7 8 9 10 11 15
    '*' (42) 17
    '+' (43) 16
    ',' (44) 11 18
    ';' (59) 1 2
    '=' (61) 3 12
    '[' (91) 18
    ']' (93) 18
    error (256)
    print_token (258) 5
    sort_token (259) 8
    reverse_token (260) 6
    length_token (261) 7
    string_token (262) 3 4
    upper_token (263) 9
    lower_token (264) 10
    substring_token (265) 11
    concat_token (266) 13
    eq_token (267) 14
    string_value_token <string_type> (268) 19
    id_token <string_type> (269) 3 4 6 8 9 10 12 13 18 20
    broj_token <broj_type> (270) 17 18


Nonterminals, with rules where they appear

    $accept (25)
        on left: 0
    Program (26)
        on left: 1 2
        on right: 0 1
    Naredba (27)
        on left: 3 4 5 6 7 8 9 10 11 12 13 14
        on right: 1 2
    E <string_type> (28)
        on left: 15 16 17 18 19 20
        on right: 3 5 7 11 12 13 14 15 16 17


State 0

    0 $accept: . Program $end

    print_token         shift, and go to state 1
    sort_token          shift, and go to state 2
    reverse_token       shift, and go to state 3
    length_token        shift, and go to state 4
    string_token        shift, and go to state 5
    upper_token         shift, and go to state 6
    lower_token         shift, and go to state 7
    substring_token     shift, and go to state 8
    string_value_token  shift, and go to state 9
    id_token            shift, and go to state 10
    '('                 shift, and go to state 11

    Program  go to state 12
    Naredba  go to state 13
    E        go to state 14


State 1

    5 Naredba: print_token . '(' E ')'

    '('  shift, and go to state 15


State 2

    8 Naredba: sort_token . '(' id_token ')'

    '('  shift, and go to state 16


State 3

    6 Naredba: reverse_token . '(' id_token ')'

    '('  shift, and go to state 17


State 4

    7 Naredba: length_token . '(' E ')'

    '('  shift, and go to state 18


State 5

    3 Naredba: string_token . id_token '=' E
    4        | string_token . id_token

    id_token  shift, and go to state 19


State 6

    9 Naredba: upper_token . '(' id_token ')'

    '('  shift, and go to state 20


State 7

   10 Naredba: lower_token . '(' id_token ')'

    '('  shift, and go to state 21


State 8

   11 Naredba: substring_token . '(' E ',' E ')'

    '('  shift, and go to state 22


State 9

   19 E: string_value_token .

    $default  reduce using rule 19 (E)


State 10

   12 Naredba: id_token . '=' E
   13        | id_token . concat_token E
   18 E: id_token . '[' broj_token ',' broj_token ']'
   20  | id_token .

    concat_token  shift, and go to state 23
    '='           shift, and go to state 24
    '['           shift, and go to state 25

    $default  reduce using rule 20 (E)


State 11

   15 E: '(' . E ')'

    string_value_token  shift, and go to state 9
    id_token            shift, and go to state 26
    '('                 shift, and go to state 11

    E  go to state 27


State 12

    0 $accept: Program . $end

    $end  shift, and go to state 28


State 13

    1 Program: Naredba . ';' Program
    2        | Naredba . ';'

    ';'  shift, and go to state 29


State 14

   14 Naredba: E . eq_token E
   16 E: E . '+' E
   17  | E . '*' broj_token

    eq_token  shift, and go to state 30
    '+'       shift, and go to state 31
    '*'       shift, and go to state 32


State 15

    5 Naredba: print_token '(' . E ')'

    string_value_token  shift, and go to state 9
    id_token            shift, and go to state 26
    '('                 shift, and go to state 11

    E  go to state 33


State 16

    8 Naredba: sort_token '(' . id_token ')'

    id_token  shift, and go to state 34


State 17

    6 Naredba: reverse_token '(' . id_token ')'

    id_token  shift, and go to state 35


State 18

    7 Naredba: length_token '(' . E ')'

    string_value_token  shift, and go to state 9
    id_token            shift, and go to state 26
    '('                 shift, and go to state 11

    E  go to state 36


State 19

    3 Naredba: string_token id_token . '=' E
    4        | string_token id_token .

    '='  shift, and go to state 37

    $default  reduce using rule 4 (Naredba)


State 20

    9 Naredba: upper_token '(' . id_token ')'

    id_token  shift, and go to state 38


State 21

   10 Naredba: lower_token '(' . id_token ')'

    id_token  shift, and go to state 39


State 22

   11 Naredba: substring_token '(' . E ',' E ')'

    string_value_token  shift, and go to state 9
    id_token            shift, and go to state 26
    '('                 shift, and go to state 11

    E  go to state 40


State 23

   13 Naredba: id_token concat_token . E

    string_value_token  shift, and go to state 9
    id_token            shift, and go to state 26
    '('                 shift, and go to state 11

    E  go to state 41


State 24

   12 Naredba: id_token '=' . E

    string_value_token  shift, and go to state 9
    id_token            shift, and go to state 26
    '('                 shift, and go to state 11

    E  go to state 42


State 25

   18 E: id_token '[' . broj_token ',' broj_token ']'

    broj_token  shift, and go to state 43


State 26

   18 E: id_token . '[' broj_token ',' broj_token ']'
   20  | id_token .

    '['  shift, and go to state 25

    $default  reduce using rule 20 (E)


State 27

   15 E: '(' E . ')'
   16  | E . '+' E
   17  | E . '*' broj_token

    '+'  shift, and go to state 31
    '*'  shift, and go to state 32
    ')'  shift, and go to state 44


State 28

    0 $accept: Program $end .

    $default  accept


State 29

    1 Program: Naredba ';' . Program
    2        | Naredba ';' .

    print_token         shift, and go to state 1
    sort_token          shift, and go to state 2
    reverse_token       shift, and go to state 3
    length_token        shift, and go to state 4
    string_token        shift, and go to state 5
    upper_token         shift, and go to state 6
    lower_token         shift, and go to state 7
    substring_token     shift, and go to state 8
    string_value_token  shift, and go to state 9
    id_token            shift, and go to state 10
    '('                 shift, and go to state 11

    $default  reduce using rule 2 (Program)

    Program  go to state 45
    Naredba  go to state 13
    E        go to state 14


State 30

   14 Naredba: E eq_token . E

    string_value_token  shift, and go to state 9
    id_token            shift, and go to state 26
    '('                 shift, and go to state 11

    E  go to state 46


State 31

   16 E: E '+' . E

    string_value_token  shift, and go to state 9
    id_token            shift, and go to state 26
    '('                 shift, and go to state 11

    E  go to state 47


State 32

   17 E: E '*' . broj_token

    broj_token  shift, and go to state 48


State 33

    5 Naredba: print_token '(' E . ')'
   16 E: E . '+' E
   17  | E . '*' broj_token

    '+'  shift, and go to state 31
    '*'  shift, and go to state 32
    ')'  shift, and go to state 49


State 34

    8 Naredba: sort_token '(' id_token . ')'

    ')'  shift, and go to state 50


State 35

    6 Naredba: reverse_token '(' id_token . ')'

    ')'  shift, and go to state 51


State 36

    7 Naredba: length_token '(' E . ')'
   16 E: E . '+' E
   17  | E . '*' broj_token

    '+'  shift, and go to state 31
    '*'  shift, and go to state 32
    ')'  shift, and go to state 52


State 37

    3 Naredba: string_token id_token '=' . E

    string_value_token  shift, and go to state 9
    id_token            shift, and go to state 26
    '('                 shift, and go to state 11

    E  go to state 53


State 38

    9 Naredba: upper_token '(' id_token . ')'

    ')'  shift, and go to state 54


State 39

   10 Naredba: lower_token '(' id_token . ')'

    ')'  shift, and go to state 55


State 40

   11 Naredba: substring_token '(' E . ',' E ')'
   16 E: E . '+' E
   17  | E . '*' broj_token

    '+'  shift, and go to state 31
    '*'  shift, and go to state 32
    ','  shift, and go to state 56


State 41

   13 Naredba: id_token concat_token E .
   16 E: E . '+' E
   17  | E . '*' broj_token

    '+'  shift, and go to state 31
    '*'  shift, and go to state 32

    $default  reduce using rule 13 (Naredba)


State 42

   12 Naredba: id_token '=' E .
   16 E: E . '+' E
   17  | E . '*' broj_token

    '+'  shift, and go to state 31
    '*'  shift, and go to state 32

    $default  reduce using rule 12 (Naredba)


State 43

   18 E: id_token '[' broj_token . ',' broj_token ']'

    ','  shift, and go to state 57


State 44

   15 E: '(' E ')' .

    $default  reduce using rule 15 (E)


State 45

    1 Program: Naredba ';' Program .

    $default  reduce using rule 1 (Program)


State 46

   14 Naredba: E eq_token E .
   16 E: E . '+' E
   17  | E . '*' broj_token

    '+'  shift, and go to state 31
    '*'  shift, and go to state 32

    $default  reduce using rule 14 (Naredba)


State 47

   16 E: E . '+' E
   16  | E '+' E .
   17  | E . '*' broj_token

    '*'  shift, and go to state 32

    $default  reduce using rule 16 (E)


State 48

   17 E: E '*' broj_token .

    $default  reduce using rule 17 (E)


State 49

    5 Naredba: print_token '(' E ')' .

    $default  reduce using rule 5 (Naredba)


State 50

    8 Naredba: sort_token '(' id_token ')' .

    $default  reduce using rule 8 (Naredba)


State 51

    6 Naredba: reverse_token '(' id_token ')' .

    $default  reduce using rule 6 (Naredba)


State 52

    7 Naredba: length_token '(' E ')' .

    $default  reduce using rule 7 (Naredba)


State 53

    3 Naredba: string_token id_token '=' E .
   16 E: E . '+' E
   17  | E . '*' broj_token

    '+'  shift, and go to state 31
    '*'  shift, and go to state 32

    $default  reduce using rule 3 (Naredba)


State 54

    9 Naredba: upper_token '(' id_token ')' .

    $default  reduce using rule 9 (Naredba)


State 55

   10 Naredba: lower_token '(' id_token ')' .

    $default  reduce using rule 10 (Naredba)


State 56

   11 Naredba: substring_token '(' E ',' . E ')'

    string_value_token  shift, and go to state 9
    id_token            shift, and go to state 26
    '('                 shift, and go to state 11

    E  go to state 58


State 57

   18 E: id_token '[' broj_token ',' . broj_token ']'

    broj_token  shift, and go to state 59


State 58

   11 Naredba: substring_token '(' E ',' E . ')'
   16 E: E . '+' E
   17  | E . '*' broj_token

    '+'  shift, and go to state 31
    '*'  shift, and go to state 32
    ')'  shift, and go to state 60


State 59

   18 E: id_token '[' broj_token ',' broj_token . ']'

    ']'  shift, and go to state 61


State 60

   11 Naredba: substring_token '(' E ',' E ')' .

    $default  reduce using rule 11 (Naredba)


State 61

   18 E: id_token '[' broj_token ',' broj_token ']' .

    $default  reduce using rule 18 (E)
